# dltj-blog

./: .dockerignore  .gitignore  .s3deploy.yml  Dockerfile  Gemfile  Gemfile-docker  Makefile  README.md  _config.yml  amplify.yml  buildspec.yml  customHttp.yml  error.html  pelicanconf.py  publishconf.py  pyproject.toml  s3-website-config.json  site.webmanifest  update_modify_date.py
_data/: navigation.yml
_drafts/: 2023-12-27-one-year-of-learning-2023.md  2024-12-27-one-year-of-learning-2024.md  2025-12-15-one-year-of-learning-2025.md  Authuser blog post.md  metadata_header.txt  niso_service_award.md
_includes/: author-profile.html  image.html  note.html  page__meta.html  robustlink.html  social-share.html  thursday-threads-header.html  thursday-threads-quote.html
_layouts/: categories.html  category.html  single.html  tags.html  wordpress-import.html
_plugins/: post_url_absolute.rb
_posts/: 2005-12-12-marketing-malpractice.html  2005-12-13-firefox-scholar.html  2005-12-13-open-worldcat-linking.html  2005-12-16-christensen-bibliography.html  2005-12-16-repositories-visualized.html  2005-12-20-germany-is-at-it-too.html  2006-01-15-a-communication-and-honesty.html  2006-01-20-collective-action-letter.html  2006-01-21-general-purpose-repository.html  2006-01-23-marc-oil.html  2006-02-04-alternate-open-peer-review-model.html  2006-02-12-bpel-in-fedora.html  2006-02-13-our-destiny.html  2006-03-18-david-lewis-in-ohio.html  2006-03-20-christensen-on-disruption-in-education.html  2006-03-22-updated-bibliography.html  2006-04-05-ajax-video-editing.html  2006-04-05-berkeleys-bspace-images-project.html  (+733 more)
(+1287 files in other folders)
