[project]
name = "dltj-blog"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Peter Murray", email = "jester@dltj.org"},
]
dependencies = [
    "pelican[markdown] @ file:///${PROJECT_ROOT}/../pelican-personal",
    "pelican-jinja2content @ git+https://github.com/pelican-plugins/jinja2content.git",
    "pelican-yaml-metadata @ git+https://github.com/pelican-plugins/yaml-metadata.git",
    "zygote-reader @ file:///${PROJECT_ROOT}/../zygote-reader",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../pelican-personal",
    "invoke>=2.2.0",
    "livereload>=2.7.0",
]
